--- a/TeXerei/bachelor.tex
+++ b/TeXerei/bachelor.tex
@@ -1260,7 +1260,7 @@ a module, a type and a constructor. Furthermore there are many
 functions in the IO module, that contain the word \emph{io}. This
 means that the search for \emph{io} results in a great amount of
 hits. To reduce the number of hits, we can restrict the search to
-a specific context. Therefor we want to provide specifiers the user
+a specific context. Therefore we want to provide specifiers the user
 combinats with the search term, for example
 \ensuremath{\text{\tt ''}\mathbin{:}\Varid{function}\;\Conid{IO''}} searches for \emph{IO} in the context of function
 names only. But this special syntax restricts the user in the use of
@@ -1326,20 +1326,24 @@ implemented parser to convert the user input into a query that can be
 processed by Holumbus. We illustrate the general idea and
 implementation approach of a parser to introduce into the subject. The
 last section covers features and implementations of the web
-application for the search engine.
+application for the search engine.  The implementations are mostly
+done(written?) in the functional programming language Haskell; we use the
+functional logic programming language Curry for the CurryDoc
+extension only.
 
 \section{CurryDoc extension}\label{implementation:currydoc}
 
 In the previous chapter we discussed the general idea of an extension
-of CurryDoc to generate a data structure. Later this data structure serves
+for CurryDoc to generate a data structure. Later this data structure serves
 as source for the index creation. In this section we take a look at
-the implementation of this extension.\\
+the implementation of this extension.
 
 % Present the general structure of the |CurryInfo| data and the
 % sub-structures |ModuleInfo|, |FunctionInfo| and |TypeInfo|.
 Since CurryDoc is written in Curry, we implemented our extension in
-Curry as well. With this decision we stand to benefit from already implemented
-functionalities and on the other hand, this simplifies the integration of our
+Curry as well. With this decision we stand to benefit from already
+implemented functionalities and on the other hand, using the same
+programming language simplifies the integration of our
 implementation with the current CurryDoc version.\\
 
 CurryDoc uses the meta-programming language FlatCurry to gain an
@@ -1414,7 +1418,7 @@ a look at these data structures and their definitions in advance in
 \>[3]{}\Conid{TypeInfo}\;\Conid{String}\;[\mskip1.5mu (\Conid{QName},[\mskip1.5mu \Conid{TypeExpr}\mskip1.5mu])\mskip1.5mu]\;[\mskip1.5mu \Conid{Int}\mskip1.5mu]\;\Conid{String}\;\Conid{String}{}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
-\caption{The data structures for a Curry module}
+\caption{The data structures representing a Curry program}
 \label{fig:curryInfo}
 \end{figure}
 
@@ -1423,64 +1427,75 @@ to a Curry module. The main information about a module consists of its
 name, author and description. We can also provide the version number
 of the implementation or the imported modules, but we decided against
 it. The latter seems to be useless information for the search engine,
-since the Curry modules are highly interrelated. This results in a
-great number of hits, when searching for a module, since every
-correlating module will be shown as well. Furthermore we think the
-version number is not a significant characteristic for a
-module. Therefor we decided to focus on the three mentioned proporties
-only.
+since the Curry modules are highly interrelated. Thus, searching for a
+module results in a great amount of hits, since every correlating
+module will be shown as well. Furthermore we think the version number
+is not a significant characteristic for a module. Therefore we decided
+to focus on the three mentioned proporties only.
 
-\ensuremath{\Conid{FunctionInfo}} consists of characteristics for a given function. It
-holds the function's name and description. Additionally we decide to
-add the corresponding module to provide a connection between the
-function and its module. This decision is based on the cause that we
-do not keep the \ensuremath{\Conid{CurryInfo}} data structure as whole for the index
-construction, but the three arguments consisting of the list of
-functions, the list of types and the module information. Thanks to
-FlatCurry we can access function characteristics like nondeterminism
-and determinism, along with the information if a given function is
-rigid or flexible. Since these are important characteristics to differ
-between Curry functions, \ensuremath{\Conid{FunctionInfo}} stores these information as
+\ensuremath{\Conid{FunctionInfo}} consists of characteristics for a given function like
+the function's name and description. Additionally we decide to add the
+corresponding module to provide a connection between the function and
+its module. This decision is based on the cause that we do not keep
+the \ensuremath{\Conid{CurryInfo}} data structure as whole for the index construction,
+but the three arguments consisting of the list of functions, the list
+of types and the module information. Thanks to FlatCurry, we can also
+access function characteristics like nondeterminism and determinism,
+along with the information if a given function is rigid or
+flexible. Since these are important characteristics to differ between
+Curry functions, \ensuremath{\Conid{FunctionInfo}} stores these information as
 property. In addition FlatCurry provides a data structure \ensuremath{\Conid{TypeExpr}}
 to describe type signatures (see \hyperref[fig:typeExpr]{last
-  chapter}). We use this signatures as part of the \ensuremath{\Conid{FunctionInfo}} data
-structure. 
+  chapter}), furthermore we get the actual definition of a
+function. We use a function's type signature as part of the
+\ensuremath{\Conid{FunctionInfo}} data structure, but decided against the usage of a
+function's definition since we could not think of a relevant use-case
+for our search engine.
 
 The data structure for types looks quite similar to
 \ensuremath{\Conid{FunctionInfo}}. \ensuremath{\Conid{TypeInfo}} consists of a type's name, description and
-corresponding module. FlatCurry provides us with information about the
-type constructors and their type signature. Therefor we store a list
-of \ensuremath{\Conid{TypeExpr}} in our structure. Additionally \ensuremath{\Conid{TypeInfo}} holds a list
-of integer to represent possible type variables. This corresponds to
-the definition of\ensuremath{\Conid{TypeExpr}}, where type variables are represented as
+corresponding module. Since FlatCurry provides type signatures for
+functions, we also get information about constructors for a given
+type. Therefore we store a list of \ensuremath{\Conid{TypeExpr}} representing the type's
+constructors. Additionally \ensuremath{\Conid{TypeInfo}} holds a list of integer to
+represent possible type variables. The decision to use integer corresponds to
+the definition of \ensuremath{\Conid{TypeExpr}}, where type variables are represented as
 integer as well. \\
 
 In the end, we feed the \ensuremath{\Conid{CurryInfo}} data structure with the specific
 module, function and type information of a given Curry program and our
 CurryDoc extension writes the data structure into a
-\emph{.cdoc}-file. The final CurryDoc version allows to mechanism to
+\emph{.cdoc}-file. The final CurryDoc version allows two mechanisms to
 generate the \ensuremath{\Conid{CurryInfo}} structure. You can generate the
 \emph{.cdoc}-file only or you initiate the HTML generation, where the
 \emph{.cdoc}-file is also part of the output. In
 \hyperref[a:currydoc]{Appendix \ref{a:currydoc}} we provide further
 instruction for the usage of CurryDoc.
 
+Due to the similar syntax, we can use the same data structures in
+Haskell as in Curry to exchange those structures. More precisely, we
+can read the \emph{.cdoc}-file within our Haskell implementation and
+work with the data structure. In order to do that, we need a Haskell
+program that defines all the data structures used in \ensuremath{\Conid{CurryInfo}}
+including the nested structures. Thus, we generate \ensuremath{\Conid{CurryInfo}} to use
+it as data structure in the process of the index creation.
 % The same data structure is used on the Haskell side that implements
 % the search engine.
 
 \section{Indexing}\label{implementation:index}
 
-First mention that the interessting parts (that we want to add to the
+First mention that the interesting parts (that we want to add to the
 index) are already filtered by the CurryDoc part. So the indexer only
 processes the information to the structure provided by the Holumbus
-framework (HolumbusState).
+framework (HolumbusState). First the .cdoc file is read and resolved
+into the structure.
 
-Present the output (files) the indexer produces. After that introduce
-the concept of documents and index. In addition to that, say something
+Present the output (files) the indexer produces.In addition to that, say something
 about refreshing and checking the list of modules.
 
-Mention the three different kinds of documents for the three
-structures: module, function, type.
+After that introduce the concept of documents and index. Mention the
+three different kinds of documents for the three structures: module,
+function, type.
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
 \column{35}{@{}>{\hspre}l<{\hspost}@{}}%
@@ -1502,14 +1517,28 @@ structures: module, function, type.
 \ColumnHook
 \end{hscode}\resethooks
 
-Explain how each kind of information (description, module name,
-function signature etc) is combined with its context, and that these
-are stored in the index. Note that information can be extracted by the
-context again.
+\begin{hscode}\SaveRestoreHook
+\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{19}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{45}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{52}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
+\>[B]{}\Conid{Document}\;\{\mskip1.5mu \Varid{title}{}\<[19]%
+\>[19]{}\mathrel{=}\Varid{fiName}\;\Varid{info},{}\<[E]%
+\\
+\>[19]{}\hsindent{26}{}\<[45]%
+\>[45]{}\Varid{uri}{}\<[52]%
+\>[52]{}\mathrel{=}\Varid{uriP},{}\<[E]%
+\\
+\>[19]{}\hsindent{26}{}\<[45]%
+\>[45]{}\Varid{custom}\mathrel{=}\Conid{Just}\;\Varid{info}\mskip1.5mu\}{}\<[E]%
+\ColumnHook
+\end{hscode}\resethooks
+                                        
 
 Note the difficulties of updating the index, because the data
 structure of the loaded pair of index and document differs from
-HolumbusState a. Conversion of \ensuremath{\Conid{Inverted}} to \ensuremath{\Conid{CompactInverted}} and
+]HolumbusState a. Conversion of \ensuremath{\Conid{Inverted}} to \ensuremath{\Conid{CompactInverted}} and
 \ensuremath{\Conid{Documents}\;\Varid{a}} to \ensuremath{\Conid{SmallDocuments}\;\Varid{a}}.
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
@@ -1517,6 +1546,11 @@ HolumbusState a. Conversion of \ensuremath{\Conid{Inverted}} to \ensuremath{\Con
 \>[B]{}\mathbf{type}\;\Conid{LoadedIndexerState}\;\Varid{a}\mathrel{=}(\Conid{CompactInverted},\Conid{SmallDocuments}\;\Varid{a}){}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
+
+Explain how each kind of information (description, module name,
+function signature etc) is combined with its context, and that these
+are stored in the index. Note that these information can be extracted by the
+context again. Focus on signatures and the problem of prefix search.
 
 Refer to the appendix, where the usage of the curryIndexer is
 explained.
@@ -1542,7 +1576,7 @@ Explain the general idea of parsers: a parser is used to analyze the
 user query with these different kinds of information. While parsing
 the string, a new data structure is composed for further use. This
 data structure is provided by the Holumbus framework and is used to
-starte the processs that returns the search results.
+start the process that returns the search results.
 
 Introduce the parser type that is parametrized with the type to parse and the
 resulting type.
