--- a/TeXerei/literatur/bib.bib
+++ b/TeXerei/literatur/bib.bib
@@ -14,11 +14,14 @@
         howpublished = {\url{http://www-ps.informatik.uni-kiel.de/currywiki/tools/currydoc}}
 }
 
-@TECHREPORT{currydoc2,
-    author = {Michael Hanus},
-    title = {CurryDoc: A Documentation Tool for Declarative Programs},
-    institution = {University of Udine},
-    year = {2002}
+@INPROCEEDINGS{currydoc2,
+author = "Hanus, M.",
+title  = "CurryDoc: A Documentation Tool for Declarative Programs",
+year         = "2002",
+booktitle    = "Proc.\ of the 11th International Workshop on Functional and
+                (Constraint) Logic Programming",
+publisher    = "Research Report",
+pages        = "225--228"
 }
 
 @misc{javadoc,
